--- a/project-dn-sh.html
+++ b/project-dn-sh.html
@@ -63,56 +63,56 @@
                         <div class="tiny-six-item">
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/p3/IMG_7346.JPG" class="img-fluid" alt="تفاصيل من مشروع DN SH 1">
+                                    <img src="assets/images/p3/IMG_7346.JPG" class="img-fluid" alt="صورة مشروع DN SH 1">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">لقطة من DN SH 1</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع DN SH 1</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/p3/IMG_7348.JPG" class="img-fluid" alt="تفاصيل من مشروع DN SH 2">
+                                <div class="popular-tour rounded-md.position-relative overflow-hidden mx-2">
+                                    <img src="assets/images/p3/IMG_7348.JPG" class="img-fluid" alt="صورة مشروع DN SH 2">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">لقطة من DN SH 2</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع DN SH 2</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/p3/IMG_7365.JPG" class="img-fluid" alt="تفاصيل من مشروع DN SH 3">
+                                <div class="popular-tour rounded-md.position-relative overflow-hidden mx-2">
+                                    <img src="assets/images/p3/IMG_7365.JPG" class="img-fluid" alt="صورة مشروع DN SH 3">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">لقطة من DN SH 3</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع DN SH 3</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/p3/IMG_7368.JPG" class="img-fluid" alt="تفاصيل من مشروع DN SH 4">
+                                <div class="popular-tour rounded-md.position-relative overflow-hidden mx-2">
+                                    <img src="assets/images/p3/IMG_7368.JPG" class="img-fluid" alt="صورة مشروع DN SH 4">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">لقطة من DN SH 4</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع DN SH 4</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/p3/IMG_7371.JPG" class="img-fluid" alt="تفاصيل من مشروع DN SH 5">
+                                <div class="popular-tour rounded-md.position-relative overflow-hidden mx-2">
+                                    <img src="assets/images/p3/IMG_7371.JPG" class="img-fluid" alt="صورة مشروع DN SH 5">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">لقطة من DN SH 5</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع DN SH 5</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/p3/IMG_7379.JPG" class="img-fluid" alt="تفاصيل من مشروع DN SH 6">
+                                <div class="popular-tour rounded-md.position-relative overflow-hidden mx-2">
+                                    <img src="assets/images/p3/IMG_7379.JPG" class="img-fluid" alt="صورة مشروع DN SH 6">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">لقطة من DN SH 6</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع DN SH 6</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
+                    </div><!--end col-->
+                </div><!--end row-->
+            </div><!--end container-fluid-->
         </section>
 
         <section class="section details-highlight" id="details">
