--- a/project-palourde.html
+++ b/project-palourde.html
@@ -63,64 +63,56 @@
                         <div class="tiny-six-item">
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/palurde/0d231a2b-d134-4d83-9963-40eed0643ad7.jpg" class="img-fluid" alt="صورة مشروع Palourde 1">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 1</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع Palourde 1</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
+                                <div class="popular-tour rounded-md.position-relative overflow-hidden mx-2">
+                                    <img src="assets/images/palurde/a62ebed8-e09a-48fa-b58e-43ba5af7608c.jpg" class="img-fluid" alt="صورة مشروع Palourde 2">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 2</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع Palourde 2</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotios-photos-1090638.jpg" class="img-fluid" alt="صورة المشروع">
+                                <div class="popular-tour rounded-md.position-relative overflow-hidden mx-2">
+                                    <img src="assets/images/palurde/b86f0b62-1ef0-4736-bbba-41c8a25ecbea.jpg" class="img-fluid" alt="صورة مشروع Palourde 3">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 3</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع Palourde 3</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-maksgelatin-4352247.jpg" class="img-fluid" alt="صورة المشروع">
+                                <div class="popular-tour rounded-md.position-relative overflow-hidden mx-2">
+                                    <img src="assets/images/palurde/bf368624-01a9-478c-bd38-256320588f15.JPG" class="img-fluid" alt="صورة مشروع Palourde 4">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 4</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع Palourde 4</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-diva-33964231.jpg" class="img-fluid" alt="صورة المشروع">
+                                <div class="popular-tour rounded-md.position-relative overflow-hidden mx-2">
+                                    <img src="assets/images/palurde/IMG_6571.jpg" class="img-fluid" alt="صورة مشروع Palourde 5">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 5</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع Palourde 5</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                <div class="popular-tour rounded-md.position-relative overflow-hidden mx-2">
+                                    <img src="assets/images/palurde/IMG_6572.jpg" class="img-fluid" alt="صورة مشروع Palourde 6">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 6</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
-                                    <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 7</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع Palourde 6</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
+                    </div><!--end col-->
+                </div><!--end row-->
+            </div><!--end container-fluid-->
         </section>
 
         <section class="section details-highlight" id="details">
