--- a/project-rakeza.html
+++ b/project-rakeza.html
@@ -3,10 +3,10 @@
 
     <head>
         <meta charset="utf-8">
-        <title>RAKEZA | كيزة - تفاصيل المشروع</title>
+        <title>RAKEZA | ركيزة - تفاصيل المشروع</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="كيزة RAKEZA يستلهم العمارة النجدية والدمشقية لتحويل تفاصيلها الهندسية والزخرفية إلى أزياء معاصرة.">
-        <meta name="keywords" content="كيزة، RAKEZA، عمارة نجدية، عمارة دمشقية، أزياء معاصرة">
+        <meta name="description" content="ركيزة RAKEZA يستلهم العمارة النجدية والدمشقية لتحويل تفاصيلها الهندسية والزخرفية إلى أزياء معاصرة.">
+        <meta name="keywords" content="ركيزة، RAKEZA، عمارة نجدية، عمارة دمشقية، أزياء معاصرة">
         <meta name="author" content="لين المطيري، شروق المنصور">
 
         <link rel="shortcut icon" href="assets/images/favicon.ico">
@@ -63,64 +63,64 @@
                         <div class="tiny-six-item">
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/rakizah/WhatsApp Image 2025-11-11 at 3.14.49 PM.jpeg" class="img-fluid" alt="صورة مشروع RAKEZA 1">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 1</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع RAKEZA 1</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/rakizah/WhatsApp Image 2025-11-11 at 3.14.50 PM.jpeg" class="img-fluid" alt="صورة مشروع RAKEZA 2">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 2</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع RAKEZA 2</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotios-photos-1090638.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/rakizah/WhatsApp Image 2025-11-11 at 3.14.50 PM (1).jpeg" class="img-fluid" alt="صورة مشروع RAKEZA 3">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 3</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع RAKEZA 3</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-maksgelatin-4352247.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/rakizah/WhatsApp Image 2025-11-11 at 3.14.50 PM (2).jpeg" class="img-fluid" alt="صورة مشروع RAKEZA 4">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 4</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع RAKEZA 4</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-diva-33964231.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/rakizah/WhatsApp Image 2025-11-11 at 3.14.50 PM (3).jpeg" class="img-fluid" alt="صورة مشروع RAKEZA 5">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 5</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع RAKEZA 5</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                <div class="popular-tour.rounded-md.position-relative overflow-hidden mx-2">
+                                    <img src="assets/images/rakizah/WhatsApp Image 2025-11-11 at 4.14.26 PM.jpeg" class="img-fluid" alt="صورة مشروع RAKEZA 6">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 6</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع RAKEZA 6</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
+                                <div class="popular-tour.rounded-md.position-relative overflow-hidden mx-2">
+                                    <img src="assets/images/rakizah/WhatsApp Image 2025-11-11 at 4.14.26 PM (1).jpeg" class="img-fluid" alt="صورة مشروع RAKEZA 7">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 7</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع RAKEZA 7</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
+                    </div><!--end col-->
+                </div><!--end row-->
+            </div><!--end container-fluid-->
         </section>
 
         <section class="section details-highlight" id="details">
@@ -134,7 +134,7 @@
 
                     <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title">
-                            <h4 class="title mb-4">حول مشروع RAKEZA | كيزة</h4>
+                            <h4 class="title mb-4">حول مشروع RAKEZA | ركيزة</h4>
                             <p class="text-muted mb-3">RAKEZA يستلهم جوهر العمارة النجدية والدمشقية ليحوّل تفاصيلها الهندسية والزخرفية إلى تصاميم معاصرة لربيع وصيف 2026.</p>
                             <p class="text-muted mb-3">يسعى المشروع لإحياء التراث بروح حديثة توازن بين الأصالة والابتكار وتبرز هوية المرأة العربية في أبهى صورة.</p>
                             <p class="text-muted">كل قطعة هي حوار بين الماضي والحاضر، حيث تتجسد الأبعاد المعمارية في أزياء أنيقة تعكس جرأة التصميم ودقته.</p>
