--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                                             <div class="overlay rounded-top"></div>
                                         </div>
                                         <div class="card-body content">
-                                            <h5 class="card-title title text-dark mb-0">RAKEZA | كيزة</h5>
+                                            <h5 class="card-title title text-dark mb-0">RAKEZA | ركيزة</h5>
                                             <div class="d-flex justify-content-between align-items-center mt-3">
                                                 <span class="text-muted small"><i class="uil uil-user me-1"></i>لين المطيري / شروق المنصور</span>
                                                 <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
