--- a/project-ahzojah.html
+++ b/project-ahzojah.html
@@ -63,64 +63,56 @@
                         <div class="tiny-six-item">
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/ahzojah/1K8A8490.jpg" class="img-fluid" alt="صورة مشروع أهزوجة 1">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 1</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع أهزوجة 1</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/ahzojah/1K8A8612.jpg" class="img-fluid" alt="صورة مشروع أهزوجة 2">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 2</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع أهزوجة 2</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotios-photos-1090638.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/ahzojah/1K8A8769.jpg" class="img-fluid" alt="صورة مشروع أهزوجة 3">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 3</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع أهزوجة 3</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-maksgelatin-4352247.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/ahzojah/1K8A8808.jpg" class="img-fluid" alt="صورة مشروع أهزوجة 4">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 4</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع أهزوجة 4</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-diva-33964231.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/ahzojah/IMAGE 1447-05-17 16_25_58.jpg" class="img-fluid" alt="صورة مشروع أهزوجة 5">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 5</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع أهزوجة 5</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/ahzojah/نسخة من 1K8A8874.jpg" class="img-fluid" alt="صورة مشروع أهزوجة 6">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 6</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
-                                    <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 7</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع أهزوجة 6</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
+                    </div><!--end col-->
+                </div><!--end row-->
+            </div><!--end container-fluid-->
         </section>
 
         <section class="section details-highlight" id="details">
