--- a/project-saf.html
+++ b/project-saf.html
@@ -63,64 +63,56 @@
                         <div class="tiny-six-item">
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/saaf/فرح7419 copy.jpg" class="img-fluid" alt="صورة مشروع ساف 1">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 1</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع ساف 1</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
+                                <div class="popular-tour rounded-md.position-relative overflow-hidden mx-2">
+                                    <img src="assets/images/saaf/فرح7544 copy.jpg" class="img-fluid" alt="صورة مشروع ساف 2">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 2</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع ساف 2</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotios-photos-1090638.jpg" class="img-fluid" alt="صورة المشروع">
+                                <div class="popular-tour.rounded-md.position-relative overflow-hidden mx-2">
+                                    <img src="assets/images/saaf/فرح7620 copy.jpg" class="img-fluid" alt="صورة مشروع ساف 3">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 3</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع ساف 3</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-maksgelatin-4352247.jpg" class="img-fluid" alt="صورة المشروع">
+                                <div class="popular-tour.rounded-md.position-relative overflow-hidden mx-2">
+                                    <img src="assets/images/saaf/مصممه كادي0342 1 copy.jpg" class="img-fluid" alt="صورة مشروع ساف 4">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 4</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع ساف 4</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-diva-33964231.jpg" class="img-fluid" alt="صورة المشروع">
+                                <div class="popular-tour.rounded-md.position-relative overflow-hidden mx-2">
+                                    <img src="assets/images/saaf/مصممه كادي0392 copy.jpg" class="img-fluid" alt="صورة مشروع ساف 5">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 5</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع ساف 5</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                <div class="popular-tour.rounded-md.position-relative overflow-hidden mx-2">
+                                    <img src="assets/images/saaf/مصممه كادي0445 copy.jpg" class="img-fluid" alt="صورة مشروع ساف 6">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 6</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
-                                    <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 7</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع ساف 6</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
+                    </div><!--end col-->
+                </div><!--end row-->
+            </div><!--end container-fluid-->
         </section>
 
         <section class="section details-highlight" id="details">
