--- a/project-saraa-tharaa.html
+++ b/project-saraa-tharaa.html
@@ -63,64 +63,56 @@
                         <div class="tiny-six-item">
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/SARRA&amp;THARAA/IMG_2001.jpg" class="img-fluid" alt="صورة مشروع SARAA&THARAA 1">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 1</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع SARAA&THARAA 1</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/SARRA&amp;THARAA/IMG_2005.jpg" class="img-fluid" alt="صورة مشروع SARAA&THARAA 2">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 2</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع SARAA&THARAA 2</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotios-photos-1090638.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/SARRA&amp;THARAA/IMG_2174.jpg" class="img-fluid" alt="صورة مشروع SARAA&THARAA 3">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 3</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع SARAA&THARAA 3</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-maksgelatin-4352247.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/SARRA&amp;THARAA/PHOTO-2025-11-10-17-53-18.jpg" class="img-fluid" alt="صورة مشروع SARAA&THARAA 4">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 4</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع SARAA&THARAA 4</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-diva-33964231.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/SARRA&amp;THARAA/PHOTO-2025-11-10-17-53-18 2.jpg" class="img-fluid" alt="صورة مشروع SARAA&THARAA 5">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 5</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع SARAA&THARAA 5</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="tiny-slide">
                                 <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-atbo-66986-245208.jpg" class="img-fluid" alt="صورة المشروع">
+                                    <img src="assets/images/SARRA&amp;THARAA/PHOTO-2025-11-10-17-53-18 3.jpg" class="img-fluid" alt="صورة مشروع SARAA&THARAA 6">
                                     <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 6</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="tiny-slide">
-                                <div class="popular-tour rounded-md position-relative overflow-hidden mx-2">
-                                    <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="img-fluid" alt="صورة المشروع">
-                                    <div class="content">
-                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة المشروع 7</a>
+                                        <a href="javascript:void(0)" class="title text-white h4 title-dark">صورة مشروع SARAA&THARAA 6</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
+                    </div><!--end col-->
+                </div><!--end row-->
+            </div><!--end container-fluid-->
         </section>
 
         <section class="section details-highlight" id="details">
